repair the wrong address of the url

--- a/App/Admin/View/AgentAdmin/ListInfo.html
+++ b/App/Admin/View/AgentAdmin/ListInfo.html
@@ -47,6 +47,8 @@
                         <div class="">
                             <a href="{:U('UserAdmin',array('p'=>$_SESSION['zzcms_useradmin_page'],'pageSize'=>$_SESSION['zzcms_useradmin_pagesize']))}" class="btn btn-primary ">返回</a>
                             <a href="{:U('AddKeyword',array('userid'=>$userid))}" class="btn btn-danger ">添加关键字</a>
+                            <a href="{:U('AddKeyword',array('userid'=>$userid))}" class="btn btn-danger "></a>
+                            <a href="{:U('AddKeyword',array('userid'=>$userid))}" class="btn btn-danger ">添加关键字</a>
                         </div>
                     </div>
                     <div class="table-responsive">
