查询云客数据成功，但是不能正常插入到数据库，明天断点找原因

--- a/App/Admin/View/AgentAdmin/ListInfo.html
+++ b/App/Admin/View/AgentAdmin/ListInfo.html
@@ -48,7 +48,7 @@
                             <a href="{:U('UserAdmin',array('p'=>$_SESSION['zzcms_useradmin_page'],'pageSize'=>$_SESSION['zzcms_useradmin_pagesize']))}" class="btn btn-primary ">返回</a>
                             <a href="{:U('AddKeyword',array('userid'=>$userid))}" class="btn btn-danger ">添加关键字</a>
                             <a href="{:U('DownloadKeyword',array('userid'=>$userid))}" class="btn btn-info ">导出</a>
-                            <a href="{:U('UploadKeyword',array('userid'=>$userid))}" class="btn btn-success ">导入</a>
+                            <a href="{:U('seachyunprice',array('keyword'=>'长沙网站第一'))}" class="btn btn-success ">导入</a>
                         </div>
                     </div>
                     <div class="table-responsive">
