--- a/App/Admin/View/AgentAdmin/CostDetail.html
+++ b/App/Admin/View/AgentAdmin/CostDetail.html
@@ -46,6 +46,7 @@
                     <div class="row">
                         <div class="">
                             <a href="{:U('UserAdmin',array('p'=>$_SESSION['zzcms_useradmin_page'],'pageSize'=>$_SESSION['zzcms_useradmin_pagesize']))}" class="btn btn-primary ">返回</a>
+                            <a href="{:U('DownloadCostDetail',array('userid'=>$listinfo[0]['userid']))}" class="btn btn-info ">导出扣费信息</a>
                         </div>
                     </div>
                     <div class="table-responsive">
