用户也可以下载扣费记录

--- a/App/Admin/View/SeoWebKeyAdmin/CostDetail.html
+++ b/App/Admin/View/SeoWebKeyAdmin/CostDetail.html
@@ -43,6 +43,11 @@
                     </div>
                 </div>
                 <div class="ibox-content">
+                    <div class="row">
+                        <div class="">
+                            <a href="{:U('DownloadCostDetail')}" class="btn btn-info ">导出扣费信息</a>
+                        </div>
+                    </div>
                     <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
