可以查询用户在同一个搜索引擎下的关键字

--- a/App/Admin/View/AgentAdmin/ListInfo.html
+++ b/App/Admin/View/AgentAdmin/ListInfo.html
@@ -31,6 +31,14 @@
                 <div class="ibox-title">
                     <h5>{$type}</h5>
                     <div class="ibox-tools">
+                        <a class="btn btn-danger btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid))}">全部</a>
+                        <a class="btn btn-success btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid,'platformid'=>'1'))}">百度</a>
+                        <a class="btn btn-success btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid,'platformid'=>'5'))}">手机百度</a>
+                        <a class="btn btn-success btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid,'platformid'=>'2'))}">360</a>
+                        <a class="btn btn-success btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid,'platformid'=>'7'))}">手机360</a>
+                        <a class="btn btn-success btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid,'platformid'=>'3'))}">搜狗</a>
+                        <a class="btn btn-success btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid,'platformid'=>'4'))}">手机搜狗</a>
+                        <a class="btn btn-success btn-xs" style="color: white" href="{:U('ListInfo',array('userid'=>$userid,'platformid'=>6))}">神马</a>
 
                     </div>
                 </div>
