--- a/App/Admin/View/AgentAdmin/SearchByName.html
+++ b/App/Admin/View/AgentAdmin/SearchByName.html
@@ -45,7 +45,7 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="">
-                            <a href="{:U('add')}" class="btn btn-primary ">新增用户</a>
+                            <a href="{:U('UserAdmin',array('p'=>$_SESSION['zzcms_useradmin_page'],'pageSize'=>$_SESSION['zzcms_useradmin_pagesize']))}" class="btn btn-primary ">返回</a>
                         </div>
                         <div class="input-group">
                             <input type="text" class="form-control" id="searchname" name="searchname">
@@ -135,7 +135,6 @@
     $("#button-search").click(function () {
 
         var searchname = $("#searchname").val();
-
 
         if (searchname == null) {
             dialog.error('请填写关键词');
