增加员工时可以增加员工的登录名称和密码

--- a/App/Admin/View/Report/index.html
+++ b/App/Admin/View/Report/index.html
@@ -44,7 +44,7 @@
                 <div class="ibox-content">
                     <div class="row">
                         <div class="">
-                            <a href="{:U('Menu/add')}" class="btn btn-primary ">新增菜单</a>
+                            <!--<a href="{:U('Menu/add')}" class="btn btn-primary ">新增菜单</a>-->
                         </div>
                     </div>
                     <div class="table-responsive">
