--- a/App/Admin/View/Employee/add.html
+++ b/App/Admin/View/Employee/add.html
@@ -66,6 +66,21 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">人员账号</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="username">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">人员登陆密码</label>
+
+                            <div class="col-sm-10">
+                                <input type="password" class="form-control" name="password">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
                                 <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
