修改分数返回时的bug

--- a/App/Admin/View/Score/edit.html
+++ b/App/Admin/View/Score/edit.html
@@ -114,7 +114,7 @@
         }, "JSON");
     });
     $("#button-cancal").click(function () {
-        window.location.href = '{:U("departmentList")}'
+        window.location.href = '{:U("scoreList")}'
     })
 </script>
 </body>
