--- a/App/Admin/View/Check/checkProject.html
+++ b/App/Admin/View/Check/checkProject.html
@@ -18,6 +18,8 @@
     <link href="__PUBLIC__/css/animate.min.css" rel="stylesheet">
     <link href="__PUBLIC__/css/style.min.css?v=4.1.0" rel="stylesheet">
 
+    <link href="__PUBLIC__/css/uploadify.css" rel="stylesheet" >
+
 </head>
 
 <body class="gray-bg">
@@ -62,6 +64,16 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">扣分图片</label>
+
+                            <div class="col-sm-10">
+                                <input id="file_upload"  type="file" multiple="true" >
+                                <img style="display: none" id="upload_org_code_img" src="" width="150" height="150">
+                                <input id="file_upload_image" name="thumb" type="hidden" multiple="true" value="">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <button class="btn btn-primary" type="button" id="button-add">提交</button>
                                 <!--<button class="btn btn-white" type="button" id="button-cancal">取消返回</button>-->
@@ -80,8 +92,17 @@
 <script src="__PUBLIC__/js/plugins/iCheck/icheck.min.js"></script>
 <!--<script src="__PUBLIC__/js/admin/common.js"></script>-->
 <script src="__PUBLIC__/js/dialog.js"></script>
+<script src="__PUBLIC__/js/jquery.uploadify.js"></script>
 <script src="__PUBLIC__/js/plugins/layer/layer.min.js"></script>
 <script src="__PUBLIC__/js/plugins/layer/laydate/laydate.js"></script>
+<script>
+    var SCOPE = {
+        'ajax_upload_image_url' : '/admin.php?c=image&a=ajaxuploadimage',
+        'ajax_upload_swf' : '/App/Admin/View/Public/js/uploadify.swf',
+    };
+
+</script>
+<script src="__PUBLIC__/js/admin/image.js"></script>
 <script>
     $(document).ready(function () {
         $(".i-checks").iCheck({checkboxClass: "icheckbox_square-green", radioClass: "iradio_square-green",})
