--- a/App/Admin/View/Department/add.html
+++ b/App/Admin/View/Department/add.html
@@ -53,6 +53,19 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">是否是门店</label>
+
+                            <div class="col-sm-10">
+                                <label>
+                                    <input type="radio" checked="checked" value="1" id="optionsRadios1" name="isshop">是
+                                </label>
+                                <label>
+                                    <input type="radio"  value="0" id="optionsRadios2" name="isshop">否
+                                </label>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
                                 <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
