--- a/App/Admin/View/Department/edit.html
+++ b/App/Admin/View/Department/edit.html
@@ -53,6 +53,19 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">是否是门店</label>
+
+                            <div class="col-sm-10">
+                                <label>
+                                    <input type="radio" <if condition="$data['isshop'] eq '1'">checked="checked"</if> value="1" id="optionsRadios1" name="isshop">是
+                                </label>
+                                <label>
+                                    <input type="radio" <if condition="$data['isshop'] eq '0'">checked="checked"</if>  value="0" id="optionsRadios2" name="isshop">否
+                                </label>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
                                 <input name="id" type="hidden" value="{$data.id}"/>
                                 <button class="btn btn-primary" type="button" id="button-add">修改内容</button>
