--- a/App/Admin/View/WebSetting/index.html
+++ b/App/Admin/View/WebSetting/index.html
@@ -21,7 +21,7 @@
                 <li>
                     <a>
                         <i class="fa fa-home"></i>
-                        <span class="nav-label">网站功能</span>
+                        <span class="nav-label">关键字价格查询</span>
                     </a>
                 </li>
                 <foreach name="submenu" key="k" item="v">
